fix CI Pipeline